fixed overflow-s problem

--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -27,6 +27,7 @@ Organize properties alphabetically
 
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 .clear {
